move findCards to playerCardService